--- a/helm-charts/order-system/Chart.yaml
+++ b/helm-charts/order-system/Chart.yaml
@@ -1,22 +1,27 @@
 apiVersion: v2
 name: order-system
-description: A Helm chart for Order System Microservices
+description: —истема обработки заказов с микросервисами
 type: application
-version: 0.1.0
+version: 1.0.0
 appVersion: "1.0.0"
+
 dependencies:
-  - name: postgres
-    version: 0.1.0
-    repository: "file://charts/postgres"
-  - name: kafka
-    version: 0.1.0
-    repository: "file://charts/kafka"
-  - name: processing-orders
-    version: 0.1.0
-    repository: "file://charts/processing-orders"
-  - name: promotions
-    version: 0.1.0
-    repository: "file://charts/promotions"
-  - name: mailings
-    version: 0.1.0
-    repository: "file://charts/mailings"
+  - name: vault
+    version: "0.24.0"  
+    repository: "https://helm.releases.hashicorp.com"
+    condition: vault.enabled
+  
+  - name: kube-prometheus-stack
+    version: "45.0.0"
+    repository: "https://prometheus-community.github.io/helm-charts"
+    condition: monitoring.prometheus.enabled
+  
+  - name: bank-vaults
+    version: "1.20.0"
+    repository: "https://kubernetes-charts.banzaicloud.com"
+    condition: vault.operator.enabled
+
+  - name: argo-rollouts
+    version: "2.32.0"
+    repository: "https://argoproj.github.io/argo-helm"
+    condition: rollouts.enabled
