--- a/helm-charts/order-system/templates/infrastructure/postgres.yaml
+++ b/helm-charts/order-system/templates/infrastructure/postgres.yaml
@@ -27,6 +27,22 @@ spec:
           value: "postgres"
         - name: POSTGRES_PASSWORD
           value: "postgres"
+        livenessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - postgres
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - postgres
+          initialDelaySeconds: 5
+          periodSeconds: 5
         {{- if .Values.postgres.persistence.enabled }}
         volumeMounts:
         - name: postgres-storage
