--- a/helm-charts/order-system/Chart.yaml
+++ b/helm-charts/order-system/Chart.yaml
@@ -11,6 +11,11 @@ dependencies:
     repository: "https://helm.releases.hashicorp.com"
     condition: vault.enabled
   
+  - name: bank-vaults
+    version: "1.20.0"
+    repository: "https://kubernetes-charts.banzaicloud.com"
+    condition: vault.mutatingWebhook.enabled
+  
   - name: kube-prometheus-stack
     version: "45.0.0"
     repository: "https://prometheus-community.github.io/helm-charts"
