--- a/helm-charts/order-system/values.yaml
+++ b/helm-charts/order-system/values.yaml
@@ -1,7 +1,7 @@
 global:
   namespace: order-system
   domain: local
-  imageRegistry: docker.io
+  imageRegistry: aleksandrkonst
 
 vault:
   enabled: true
@@ -18,6 +18,17 @@ vault:
           paths:
             - path: /
               pathType: Prefix
+  mutatingWebhook:
+    enabled: true
+    
+bank-vaults:
+  webhook:
+    enabled: true
+    configMapName: vault-webhook-config
+    env:
+      VAULT_ADDR: "http://vault:8200"
+      VAULT_PATH: "secret"
+      VAULT_ROLE: "order-system"
 
 monitoring:
   prometheus:
@@ -74,6 +85,13 @@ processingOrders:
           args:
             - name: service-name
               value: processing-orders-api
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "200m"
+    limits:
+      memory: "512Mi"
+      cpu: "500m"
 
 mailings:
   enabled: true
@@ -83,6 +101,16 @@ mailings:
   replicaCount: 2
   vault:
     enabled: true
+  service:
+    type: ClusterIP
+    port: 8080
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "100m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
 
 promotions:
   enabled: true
@@ -92,10 +120,20 @@ promotions:
   replicaCount: 2
   vault:
     enabled: true
+  service:
+    type: ClusterIP
+    port: 8080
   ingress:
     enabled: true
     className: nginx
     host: promotions.local
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "100m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
 
 kafka:
   enabled: true
@@ -110,3 +148,11 @@ postgres:
     size: 8Gi
   vault:
     enabled: true
+
+databaseMigrator:
+  enabled: true
+  image:
+    repository: database-migrator
+    tag: latest
+  job:
+    restartPolicy: OnFailure
